# A-titolo-provvisorio

./: LICENSE  README.md
Frobenius/: CMakeLIsts.txt  CMakeLists.txt  Cargo.toml  Compile.bat  Frobenius.c  Frobenius.hs  Frobenius_ltm.c  Frobenius_num.rs  Frobenius_solver.py  LICENSE  Readme.md  bench_frobenius.c  build.ps1  build_borland.bat  build_vs.bat  cr8_vs_prj.bat  cr8_vs_sol.bat  readme.md  run_benchmarks.bat  run_tests.bat  test_cases.txt  test_frobenius.c  usage.md
Hamming/: LICENSE  compile.bat  readme.md  test_run.bat
Hamming/docs/: readme.md
Hamming/examples/: hamming_examples.md
Hamming/src/: Hamming_DL.c  ksubset_DL.c
Hamming/src/C/: Hamming2.c  Hamming_DL.c  Knuth.c  ksubset_DL.c  readme.md
Hamming/src/Python/: Hamming.py  readme.md
Marriage/: GI_data1.h  Stable.sln  Stable.vcxproj  Stable.vcxproj.filters  Stable_GI.c  Stable_GI.h  readme.md
Marriage/Stable/x64/Debug/: CodeAnalysisResultManifest.txt  Stable.exe.recipe
Menage/: readme.md
Partizioni/: AccAsc.c  Hpart.c  Malenfant.c  Susy77.c  gen_GPN.c  gpn_part.c  gpn_table.h  readme.md
Petri/: TLSC.c  petri_arinc_ada.adb  petri_net_c99.c  petri_net_eiffel.e  petri_net_j.ijs  petri_net_rust.rs  petri_net_winicon.icn  readme.md
Steiner/: LICENSE  readme.md
Steiner/C/: QLCI.c  STSC.c  STSC_LUT.c  STSC_UI.c  STSC_gen.c  STSC_mode.c  readme.md
Steiner/Include/: Peltesohn.h  STSC.h  STSC_LUT.h  STSC_gen.h  readme.md
Steiner/LIB/: STSC.lib
Steiner/Python/: Peltesohn.py  STSC_LUT.py  STSC_test.py  readme.md
Steiner/RefData/: STSC_0007_ref.csv  STSC_0013_ref.csv  STSC_0015_ref.csv  STSC_0019_ref.csv  STSC_0027_ref.csv  STSC_0045_ref.csv  STSC_0063_ref.csv  STSC_0073_ref.csv  STSC_0075_ref.csv  STSC_0079_ref.csv  STSC_0081_ref.csv  STSC_0085_ref.csv  STSC_0087_ref.csv
Steiner/Script/: Gen_LUT.py  Gen_LUT.tcl  gen_lut.awk  gen_lut.lua  readme.md  test_script.bat
Steiner/VS_Solution/: VS_Solution.sln  readme.md
Steiner/VS_Solution/STSC_LUT/: STSC_LUT.py  STSC_LUT.pyproj
Steiner/VS_Solution/STSC_gen/: STSC_0099.csv  STSC_gen.vcxproj  STSC_gen.vcxproj.filters
Steiner/VS_Solution/STSC_gen/x64/Release/: STSC_gen.exe.recipe  STSC_gen.iobj  STSC_gen.ipdb
Steiner/VS_Solution/STSC_gen/x64/Release/STSC_gen.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Steiner/VS_Solution/STSC_lib/: STSC_lib.vcxproj  STSC_lib.vcxproj.filters
Steiner/VS_Solution/STSC_lib/x64/Release/STSC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Steiner/VS_Solution/STSC_lib/x64/Release/STSC_lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  STSC_lib.lastbuildstate
Steiner/VS_Solution/x64/Release/: STSC_lib.lib  batch.txt  test.bat
Steiner/batch/: bldapp.bat  bldlib.bat  chkenv.bat  dbg.bat
