[package]
name = "frobenius_num"
version = "1.2.0"
edition = "2021"
authors = ["M.A.W. 1968"]
description = "Risolutore del problema di Frobenius in Rust"

[dependencies]
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
bitvec = "1.0.1"
num_cpus = "1.15.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true